# ml-solar-energy-production-de

./: CLAUDE.md  README.md  main.py  pyproject.toml
.claude/commands/: commit.md  execute.md  planning.md  prime.md
deployments/dev/kind/: kind-with-portmapping.yaml
deployments/dev/kind/manifests/: grafana-values.yaml  kafka-e11b.yaml  kafka-ui-all-in-one.yaml  mlflow-minio-secret.yaml  mlflow-values.yaml  risingwave-values.yaml
deployments/dev/kind/scripts/: port-forward.sh  setup-cluster.sh  teardown-cluster.sh
plans/: extraction-pipeline.md  feature-pipeline.md  install-tech-stack.md
services/extraction/: pyproject.toml  settings.env.example
services/extraction/src/: __init__.py  config.py  main.py  models.py  producer.py  smard_client.py  weather_client.py
services/features/: pyproject.toml  settings.env.example
services/features/src/: config.py  consumer.py  feature_engineer.py  main.py  models.py  risingwave_client.py
tests/: conftest.py
tests/unit/extraction/: __init__.py  test_producer.py  test_smard_client.py  test_weather_client.py
tests/unit/features/: test_consumer.py  test_feature_engineer.py  test_risingwave_client.py
