[project]
name = "extraction"
version = "0.1.0"
description = "Pipeline 1: Data extraction from SMARD and Open-Meteo APIs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "confluent-kafka>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
